# Harvist

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP_QUICK_START.md  docker-compose.yml  gitignore  openapi.yaml  pyproject.toml
.claude/: settings.local.json
.githooks/: commit-msg  pre-commit
.github/: AUTOMATION.md  PULL_REQUEST_TEMPLATE.md  ROADMAP_SETUP.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  docs.md  feature.md  integration.md
.github/workflows/: harvist-roadmap.yml  update-project-status.yml
api/: __init__.py  main.py
api/core/: __init__.py  config.py  logging.py  security.py
api/v1/: router.py
data/: gs1_prefixes_seed.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
services/: csv_parser.py  storage_service.py
services/ai/: claude_client.py  description_generator.py  description_pipeline.py  seo_pipeline.py  translation_pipeline.py
services/integrations/: base.py
services/scraper/: brand_cache.py  brand_pipeline.py  brand_scraper.py  brand_validator.py  consumer.py  pipeline.py  producer.py
services/utils/: __init__.py  amazon_brand_client.py  ean_http_clients.py
tests/integration/: test_brand_validation.py  test_brands_panel.py  test_dolibarr_categories_endpoints.py  test_dolibarr_invoices_endpoints.py  test_dolibarr_orders_endpoints.py  test_dolibarr_products_endpoints.py  test_dolibarr_status.py  test_dolibarr_stocks_endpoints.py  test_dolibarr_thirdparties_endpoints.py  test_files_endpoints.py  test_jobs_endpoint.py  test_photo_selection.py  test_review_panel.py  test_seo_pipeline.py  (+2 more)
workers/: celery_app.py  tasks.py
(+111 files in other folders)
