# @author BenjaminDTS & Carlos Vico
# pyproject.toml — Proyecto Scraping: FastAPI + Celery + Redis
# Dependencias fijadas para reproducibilidad en producción.

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "harvist-scraper"
version = "1.0.0"
description = "Scraper de imágenes de producto con FastAPI, Celery y Redis"
authors = [
    { name = "BenjaminDTS" },
    { name = "Carlos Vico" },
]
requires-python = ">=3.11"
dependencies = [
    # --- Web framework ---
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",

    # --- Validación y configuración ---
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",

    # --- Task queue ---
    "celery==5.4.0",
    "redis==5.0.4",

    # --- Scraping ---
    "selenium==4.21.0",
    "undetected-chromedriver==3.5.5",
    "requests==2.32.3",
    "Pillow==10.3.0",

    # --- Logging ---
    "loguru==0.7.2",

    # --- Cloud storage (opcionales, solo si se usan los backends S3/Azure) ---
    "boto3==1.34.131",
    "azure-storage-blob==12.20.0",

    # --- Rate limiting ---
    "slowapi==0.1.9",

    # --- CORS / Seguridad ---
    "python-multipart==0.0.9",
    "httpx==0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "ruff==0.4.4",
    "pip-audit==2.7.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
